# nex

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/nex/core/: contextsettings.h  displaymode.h  event.h  eventprovider.h  game.h  gamelauncher.h  gfxprovider.h  windowhandle.h  windowprovider.h  windowstyle.h
include/nex/filesystem/: directory.h  directoryinfo.h  file.h  fileinfo.h  fileinputstream.h  fileoutputstream.h  path.h
include/nex/game/: gamelauncher.h  gameprovider.h
include/nex/gfx/: color.h  drawtype.h  elementbuffer.h  font.h  glyph.h  image.h  shader.h  text.h  texture.h  vertex2d.h  vertex3d.h  vertexarray.h  vertexbuffer.h  vertexlist2d.h  vertexlist3d.h
include/nex/math/: aabb.h  boundingbox.h  boundingfrustum.h  boundingsphere.h  circle.h  containmenttype.h  frustum.h  gjk.h  mat4.h  mathhelper.h  matrix.h  matrix.inl  plane.h  plane.inl  quaternion.h  quaternion.inl  ray.h  ray.inl  rect.h  rect.inl  sphere.h  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
include/nex/math/geo/: planeintersectiontype.h  ray.h
include/nex/system/: instream.h  logger.h  memoryinputstream.h  memoryoutputstream.h  noncopyable.h  outstream.h  string.h  string.inl  typedefs.h  utf.h  utf.inl
include/nex/window/: window.h  windowhandle.h  windowstyle.h
src/nex/: CMakeLists.txt  README.md  TODO.md
src/nex/core/: CMakeLists.txt  displaymode.cpp  eventprovider.cpp  eventproviderimpl.cpp  eventproviderimpl.h  game.cpp  gamelauncher.cpp  gfxprovider.cpp  gfxproviderimpl.cpp  gfxproviderimpl.h  windowprovider.cpp
src/nex/core/unix/: displaymodeimpl.cpp  oswindowprovider.cpp  oswindowprovider.h
src/nex/core/win32/: displaymodeimpl.cpp  oswindowprovider.cpp  oswindowprovider.h
src/nex/filesystem/: CMakeLists.txt  directory.cpp  fileinputstream.cpp  fileoutputstream.cpp  path.cpp
src/nex/filesystem/unix/: osdirectoryimpl.cpp  osfileimpl.cpp  ospathimpl.cpp
src/nex/filesystem/win32/: osdirectoryimpl.cpp  osfileimpl.cpp  ospathimpl.cpp
src/nex/game/: CMakeLists.txt  game.cpp  gamelauncher.cpp
src/nex/gfx/: CMakeLists.txt  color.cpp  elementbuffer.cpp  font.cpp  image.cpp  imageloader.cpp  imageloader.h  shader.cpp  text.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp  vertexlist2d.cpp  vertexlist3d.cpp
src/nex/math/: CMakeLists.txt  aabb.cpp  boundingbox.cpp  boundingfrustum.cpp  boundingsphere.cpp  circle.cpp  frustum.cpp  gjk.cpp  plane.cpp  ray.cpp  sphere.cpp
src/nex/system/: CMakeLists.txt  instream.cpp  logger.cpp  memoryinputstream.cpp  memoryoutputstream.cpp  outstream.cpp  string.cpp
src/nex/window/: CMakeLists.txt  window.cpp
src/testing/: CMakeLists.txt  main.cpp
